Fix nullable page-token test expectation